--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
             "server": "10.5.70.233",
             "port": 3306,
             "driver": "MariaDB",
-            "name": "RaspPingDatabase",
+            "name": "PingDatabase",
             "database": "RaspPingDatabase",
             "username": "echlinArch",
             "password": "yTppW5hCKxDf7Mp"
