--- a/nodeJS/.env
+++ b/nodeJS/.env
@@ -3,3 +3,6 @@ DB_HOST="10.5.70.233"
 DB_USER='echlinArch'
 DB_PW="yTppW5hCKxDf7Mp"
 DB_DATABASE="RaspPingDatabase"
+DB_HomeUSER='raspPingHome'
+DB_HomePW="V0b393RfctQvVYYlqxtCFRW3"
+DB_StaffUSER='raspPingStaff'
