--- a/nodeJS/package.json
+++ b/nodeJS/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mariadb": "^2.5.6"
+    "mariadb": "^2.5.6",
+    "react-chartjs": "^1.2.0"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
