--- a/nodeJS/.env
+++ b/nodeJS/.env
@@ -6,3 +6,4 @@ DB_DATABASE="RaspPingDatabase"
 DB_HomeUSER='raspPingHome'
 DB_HomePW="V0b393RfctQvVYYlqxtCFRW3"
 DB_StaffUSER='raspPingStaff'
+NODE_ENV='productio'
