finished overall graphing

--- a/nodeJS/.env
+++ b/nodeJS/.env
@@ -7,3 +7,4 @@ DB_HomeUSER='raspPingHome'
 DB_HomePW="V0b393RfctQvVYYlqxtCFRW3"
 DB_StaffUSER='raspPingStaff'
 NODE_ENV='productio'
+CACHE_RESET=900
