--- a/nodeJS/web-portal/package.json
+++ b/nodeJS/web-portal/package.json
@@ -11,7 +11,8 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "react-datepicker": "^4.7.0" 
   },
   "scripts": {
     "start": "react-scripts start",
