fixed unsecure speedtest

--- a/python/setup/wpa_supplicant.conf
+++ b/python/setup/wpa_supplicant.conf
@@ -2,14 +2,14 @@ ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
 country=US
 
-network = {
-	ssid="ChargerWifi"
-	proto=RSN
-	key_mgmt=WPA-EAP
-	pairwise=CCMP
-	auth_alg=OPEN
-	eap=PEAP
-	phase2="auth=MSCHAPV2"
-	identity="FWSCholl3"
-	password=hash:$PASSWORD
+network={
+ssid="ChargerWifi"
+proto=RSN
+key_mgmt=WPA-EAP
+pairwise=CCMP
+auth_alg=OPEN
+eap=PEAP
+phase2="auth=MSCHAPV2"
+identity="FWSCholl3"
+password="q&JG3pBA_M3P"
 }
