--- a/python/setup/.env
+++ b/python/setup/.env
@@ -1,8 +1,16 @@
-CURRENT_DIR='/usr/local/bin/PingTest/python'
+CURRENT_DIR='/Users/fwscholl3/Documents/PingTest-1/python'
 EMAIL_USERNAME="networkalerts@newhaven.edu"
 EMAIL_PASSWORD="d34-PDdP"
 SMTP_SERVER='smtp.office365.com'
 SMTP_PORT=587
+
+API_SERVER='http://10.5.70.233:8080'
+
+PING_REST='60'
+
+PING_INTERVAL='1'
+PING_AMOUNT='300'
+PING_SERVER='8.8.8.8'
 
 SPEED_TEST=true
 PING_TEST=true
